2006-03-06 Mikhail Khodjaiants
	Fix for Bug 93777: Postmortem and Local launch need a default preference for selected debugger.
	* ICDebugHelpContextIds.java
	+ DebuggerTypesPage.java
	* PreferenceMessages.properties
	* plugin.properties
	* plugin.xml

2006-02-27 Mikhail Khodjaiants
	Discouraged access to EditorsPlugin. 
	Added support for SharedTextColors to CDebugUIPlugin.
	+ SharedTextColors.java
	* DisassemblyView.java
	* CDebugUIPlugin.java

2006-02-27 Mikhail Khodjaiants
	Bug 89429: replaced the usage of the internal SourceLookupUIUtils class by DebugUITools.
	* AddSourceContainerDialog.java
	* EditContainerAction.java
	* SourceContainerLabelProvider.java

2006-02-27 Mikhail Khodjaiants
	Added dependency to the org.eclipse.ui.views plugin (needed to use the breakpoint 
	actions in the Outline view).
	* MANIFEST.MF

2006-02-27 Mikhail Khodjaiants
	The DirectorySourceContainer's UI now supports the subfolders searching option (see bug 89748).
	Removed the UI related to CDirectorySourceContainer. 
	- CDirectorySourceContainerBrowser.java
	- CDirectorySourceContainerDialog.java
	* SourceContainerWorkbenchAdapter.java
	* SourceLookupUIMessages.properties
	* plugin.xml

2006-02-21 Mikhail Khodjaiants
	Bug 122336: Use the asynchronous tree viewer in the Modules view.
	Adjustments to the platform changes in M5.
	+ src/org/eclipse/cdt/debug/internal/ui/elements/adapters (new package)
	+ CDebugElementAdapterFactory.java
	* AbstractViewerState.java
	+ ModuleContentAdapter.java
	+ ModuleProxyFactory.java
	* ModulesView.java
	* ModulesViewer.java
	* ModulesViewerState.java
	* ModulesViewEventHandler.java
	- ModuleTreeContentAdapter.java
	* CDebugUIPlugin.java

2006-02-03 Mikhail Khodjaiants
	The "ICDebuggerPage" interface and "AbstractCDebuggerPage" class are added.
	All extensions of the "CDebuggerPage" extension point must implement "ICDebuggerPage".
	* CDebuggerPage.exsd
	+ AbstractCDebuggerPage.java
	* CDebugUIPlugin.java
	+ ICDebuggerPage.java
